2025-01-10T12:43:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12709740863 # 763
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-10
* notice: last 14d: unq all: 16 19
* notice: prev accum: outdated-unq outdated-all / unq all: 3816 8385 / 3834 8403
* notice: next accum: outdated-unq outdated-all / unq all: 3816 8385 / 3835 8404
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-01-09]

2025-01-10T01:46:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12701728465 # 762
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-10
* notice: last 14d: unq all: 15 18
* notice: prev accum: outdated-unq outdated-all / unq all: 3816 8385 / 3833 8402
* notice: next accum: outdated-unq outdated-all / unq all: 3816 8385 / 3834 8403
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-01-09]

2025-01-09T02:11:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12682348143 # 760
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-09
* notice: last 14d: unq all: 14 17
* notice: prev accum: outdated-unq outdated-all / unq all: 3814 8383 / 3832 8401
* notice: next accum: outdated-unq outdated-all / unq all: 3816 8385 / 3833 8402
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2024-12-25] / [2025-01-08]

2025-01-08T12:43:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12670804826 # 759