@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-01-10T12:43:21Z",
+  "timestamp" : "2025-01-11T01:44:11Z",
   "count_outdated" : 8385,
   "uniques_outdated" : 3816,
-  "count" : 8404,
-  "uniques" : 3835,
+  "count" : 8405,
+  "uniques" : 3836,
   "clones" : [
     {
       "timestamp": "2024-12-28T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-01-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
