@@ -1,6 +1,6 @@
 {
-  "count": 19,
-  "uniques": 16,
+  "count": 20,
+  "uniques": 17,
   "clones": [
     {
       "timestamp": "2024-12-28T00:00:00Z",
@@ -46,6 +46,11 @@
       "timestamp": "2025-01-09T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-01-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
